# osuwapp

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
docs/: index.html
scripts/: Invoke-VsDevCommand.ps1  Set-VsDevEnvironment.ps1  generate-app-icon.py
scripts/tosu-overlay/: main.mjs  preload.mjs  renderer.html  renderer.mjs
src/: App.css  App.tsx  index.css  mockSnapshot.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mock.rs  models.rs  overlay.rs  reader.rs  storage.rs
src-tauri/windows/: nsis-hooks.nsh
