[package]
name = "osuwapp"
version = "0.1.2"
description = "Desktop osu! session companion with live PP"
authors = ["dundut"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "osuwapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
anyhow = "1.0"
asdf-overlay-client = "1.2.1"
rosu-mem = "2.0.0"
rosu-map = "0.2.1"
rosu-memory-lib = "1.3.1"
rosu-mods = "0.4.1"
rosu-pp = "4.0.1"
tokio = { version = "1.47", features = ["rt-multi-thread", "time", "net", "sync", "io-util"] }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
fontdue = "0.9.3"
